Use Collections.unmodifiableMap, not Map.copyOf
Map could be an instance of HashMap with null values.